added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,74 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+
+        <h2>HTML</h2>
+
+        <ul>
+
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Tag is represented by angle brackets with associated tage names contained inside, designed to place elements on the page</li>
+          <li>Element is content in between tags like text, an image, etc. This comment is an element in between a tag.</li>
+          <li>br element creates a line of empty space, or a line break, between two blocks of content</li>
+
+        </ul>  
+      
+      </section>
+      
+      <section class="card" id="css-section">
+
+        <h2>CSS</h2>
+
+        <ul>
+
+          <li>Enter your CSS notes here</li>
+
+        </ul>  
+
+      </section>
+
+      <section class="card" id="git-section">
+
+        <h2>Git</h2>
+
+        <ul>
+
+          <li>pwd: print working directory - displays the current working directory in the terminal</li>
+          <li>ls: displays the list of files and folders in the current directory</li>
+          <li>cd: change directory: navigates between directories in the path</li>
+          <li>cd ..: navigates backwards one level at a time through the path of your directories</li>
+          <li>mkdir: creates a new directory</li>
+          <li>touch: creates a file inside the current directory</li>
+          <li>start: opens a file in the current directory</li>
+          <li>git: command that must precede every git statement</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch name: creates a new branch and switches to it</li>
+          <li>add: adds modifications in the current working branch</li>
+          <li>-a: indicates desire to add all changes</li>
+          <li>commit: message that describes what the commit contains</li>
+          <li>-m: indicates inserting a message</li>
+          <li>pull: receive a branch's modifications into the local environment</li>
+          <li>origin: GitHub repo</li>
+          <li>push: push changes we have locally to another location</li>
+
+        </ul>
+
+      </section>
+
+      <section class="card" id="javascript-section">
+
+        <h2>JavaScript</h2>
+
+        <ul>
+
+          <li>Enter your JavaScript notes here</li>
+
+        </ul>
+
+      </section>
+
     </main>
 
     <footer>
