added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -34,7 +35,11 @@
 
         <ul>
 
-          <li>Enter your CSS notes here</li>
+          <li>declarations - contain two important components: the CSS property we want to apply and the value of the property. For example, the declaration “color: blue;” includes the CSS property “color” and the value for that property, “blue.”</li>
+          <li>margin - acts much like a margin in a word processing document, indicates how much space we want around the OUTSIDE of an element. Margin not visible on the page; merely adds a buffer. When margin is set to “0” we are indicating we want NO space around the element</li>
+          <li>padding - adds space around the content INSIDE an element. When you increase padding, you are making the entire element bigger. Padding is located inside the element, whereas margin is outside an element.</li>
+          <li>IT IS IMPORTANT TO KNOW THAT EVERY HTML ELEMENT IS ESSENTIALLY A BOX, CONSISTING OF MARGINS OUTSIDE THE ELEMENT, AND THE ELEMENT'S BORDERS, PADDING, AND CONTENT, SOMETIMES REFERRED TO AS THE CSS BOX MODEL</li>
+          <li>* - declaring all elements of the page will have the same style properties</li>
 
         </ul>  
 
