Added JS code pt2

--- a/index.html
+++ b/index.html
@@ -80,7 +80,21 @@
 
         <ul>
 
-          <li>Enter your JavaScript notes here</li>
+          <li>Variable: different data types of coding languages, as seen below</li>
+          <li>String: sequence of text enclosed in single or double quote marks</li>
+          <li>Number: number with no quotes around them. Just a regular number</li>
+          <li>Boolean: true/false value</li>
+          <li>Array: structure that allows you to store multiple values in a single reference</li>
+          <li>Object: can be anything. Everything in JS can be an object and can be stored in a variable</li>
+          <li>Addition (+): add two numbers or combine two strings</li>
+          <li>Subtraction, multiplication, division (-, *, /) - what you'd expect in basic math</li>
+          <li>Assignment (=): assigns a value to a variable</li>
+          <li>Strict equality (===): performs a test to see if two values are equal and of the same data type. Returns as a boolean</li>
+          <li>      For example: let myVariable = 3; myVariable === 4;</li>
+          <li>Not, Does-Not-Equal (!, !==): returns the logically opposite value of what it precedes. Turns a true into a false, etc. when it is used alongside the equality operator (see above one), the negation operator tests whether two values are not equal</li>
+          <li>      For “not” the basic expression is “true,” but the comparison returns “false,” because we negate it: let myVariable = 3; !(myVariable === 3);</li>
+          <li>      “Does-not-equal” gives basically the same result with different syntax. Here we are testing “is myVariable NOT equal to 3.” This returns “false” because myVariable IS equal to 3: let myVariable = 3; myVariable !== 3;</li>
+          <li>Note that each line of JavaScript code ends with a semicolon</li>
 
         </ul>
 
